--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,180 @@
 /****** General ***********/
-
 * {
-    font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+ 
 }
+
 body {
-    margin: 0;
-  }
-
-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  margin: 0;
 }
 
-.logo img{
-    width: 50%;
-    padding-right: 30%;
-    padding-left: 30%;
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header .logo img {
+  width: 50%;
+  padding-right: 30%;
+  padding-left: 30%;
 }
 
-.localisation{
-    display: flex;
-    width: 100%;
-    height: 50px;
-    justify-content: center;
-    align-items: center;
-    background: #EAEAEA;
+main .localisation {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  background: #EAEAEA;
+}
+main .localisation p {
+  font-size: 16px;
+  color: #353535;
+  padding-left: 3%;
+}
+main .reservation {
+  width: 100%;
+  height: 295px;
+  background: #F6F6F6;
+}
+main .reservation h1 {
+  font-size: 24px;
+  text-align: center;
+}
+main .reservation p {
+  color: #353535;
+  text-align: center;
+  font-size: 18px;
+  padding-bottom: 10%;
+}
+main .reservation .btn {
+  color: #fff;
+  background: linear-gradient(#FF79DA, #9356DC);
+  font-size: 20px;
+  border-radius: 50px;
+  border: none;
+  padding: 2%;
+  text-decoration: none;
+  margin: 20%;
+}
+main .fonctionnement {
+  width: 375px;
+  height: 440px;
+}
+main .fonctionnement h2 {
+  font-size: 24px;
+  color: #000;
+  padding-left: 6%;
+}
+main .fonctionnement .fonctions {
+  margin: 10%;
+  background: #F6F6F6;
+  text-decoration: none;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 20px;
+  width: 322.486px;
+  height: 72.379px;
+  text-align: center;
 }
 
-.localisation p{
-    font-size: 16px;
-    color: #353535;
-    padding-left: 3%;
+.fonctions a{
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
-.reservation{
-    width: 100%;
-    height: 295px;
-    background: #F6F6F6;
 
+
+.fonctions i{
+  padding-right:  5%;
 }
 
-.reservation h1{
-    font-size: 24px;
-    text-align: center;
 
+/**.fonctions i {
+  border-radius: 50%;
+  border: 1px solid  #9356DC;
+  height: 24px;
+  width: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  background: #9356DC;
+  color: #F6F6F6;
+}
+**/
+
+.restaurants{
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+  background:  #F6F6F6;
 }
 
-.reservation p{
-   color: #353535;
-   text-align: center;
-   font-size: 18px;
-   padding-bottom: 10%;
+.restaurantcard{
+  height: 340px;
+  border-radius: 15px;
+  background: #FFF;
+  margin-bottom: 15%;
+  /* Shadow/Card */
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
 }
 
-.btn{
-    color: #fff;
-    background: linear-gradient(#FF79DA, #9356DC);
-    font-size: 20px;
-    border-radius: 50px;
-    border: none;
-    padding: 2%;
-    text-decoration: none;
-    margin: 20%;
-    
+
+.restaurantcard h3{
+  width: 100%;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 700;
+  color: #000;
+  margin-left: 2%;
+} 
+
+.restaurantcard p{
+  font-size: 17px;
+  color: black;
+  font-weight: 300;
+  margin-left: 2%;
 }
 
-.fonctionnement{
-    width: 375px;
-    height: 440px;
-    
-}    
-
-.fonctionnement h2{
-    font-size: 24px;
-    color: #000;
-
+.restaurantcard img{
+  width: 100%;
+  height: 231px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
-.fonctions{
-    margin: 10%;
-    background:#F6F6F6;
-    text-decoration: none;
-    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
-    
-    width: 322.486px;
-    height: 72.379px;
-    text-align: center;
+footer {
+  background: #353535;
+  color: #EAEAEA;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  
+}
+footer ul {  
+  list-style-type: none;
+  padding-left: 5%;
 }
 
+.logo{
+  color:#FFF;
+  font-family: Shrikhand;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 3%;
+  padding-top: 3%;
+}
+
+footer i{
+  margin-right: 2%;
+}
+
+/*# sourceMappingURL=style.css.map */
