--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,25 +1,21 @@
 /****** General ***********/
 
-* {
-    font-family: 'Roboto', sans-serif;
-    text-decoration: none;
-}
-
-body {
-    margin: 0;
-}
 
 header {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+    height: 63px;
 
     .logo {
-        img {
-            width: 50%;
-            padding-right: 30%;
-            padding-left: 30%;
-        }
+        color: black;
+        text-align: center;
+        font-family: Shrikhand;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
     }
 }
 
@@ -30,130 +26,253 @@ main {
         height: 50px;
         justify-content: center;
         align-items: center;
-        background: #EAEAEA;
+        background: $darkGrey;
 
         p {
             font-size: 16px;
-            color: #353535;
+            color: $darkenGrey;
             padding-left: 3%;
         }
     }
 
     .reservation {
         width: 100%;
-        height: 295px;
-        background: #F6F6F6;
+        background: $grey;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
 
         h1 {
-            font-size: 24px;
             text-align: center;
+            margin: 0;
+            color: black;
+            font-family: Roboto;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal;
+            margin-bottom: 20px;
         }
 
         p {
-            color: #353535;
+            color: $darkenGrey;
             text-align: center;
             font-size: 18px;
-            padding-bottom: 10%;
+            margin: 0;
+            margin-bottom: 20px;
         }
 
         .btn {
             color: #fff;
             background: linear-gradient(#FF79DA, #9356DC);
-            font-size: 20px;
             border-radius: 50px;
             border: none;
-            padding: 2%;
+            padding-left: 20px;
+            padding-right: 20px;
             text-decoration: none;
-            margin: 20%;
-
+            font-family: Roboto;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+            height: 50px;
+            display: flex;
+            align-items: center;
         }
     }
 
-    .fonctionnement {
-        width: 375px;
-        height: 440px;
+    section.functioning {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: $white;
 
         h2 {
-            font-size: 24px;
-            color: #000;
-
+            width: 100%;
+            padding-left: 40px;
+            line-height: 28px;
         }
 
-        .fonctions {
-            margin: 10%;
-            background: #F6F6F6;
-            text-decoration: none;
-            box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-            border-radius: 20px;
-
-            width: 322.486px;
-            height: 72.379px;
+        button {
+            position: relative;
+            width: 90%;
             text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 72.38px;
+            background-color: $greyBG;
+            border-radius: 20px;
+            border: none;
+            cursor: pointer;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+            font-weight: 500;
+            font-size: 16px;
+            font-family: 'Roboto', sans-serif;
+
+            margin-bottom: 30px;
+
+            .badge {
+                width: 24px;
+                height: 24px;
+                background-color: $purple;
+                color: $white;
+                font-size: 14.18px;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                left: -12px;
+            }
+
+            i {
+                color: $greyDarker;
+                font-size: 19.9px;
+                position: absolute;
+                left: 8%;
+            }
+
+            &:hover {
+                i {
+                    color: $purple;
+                }
+            }
         }
     }
 
-    .restaurants{ 
-            height: 340px;
-            border-radius: 15px;
-            background: #FFF;
-            margin-bottom: 15%;
-            /* Shadow/Card */
-            box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
+    section.eateries {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: $darkGrey;
 
-        h3 {
+        h2 {
             width: 100%;
-            font-family: Roboto;
-            font-size: 18px;
-            font-weight: 700;
-            color: #000;
-            margin-left: 2%;
-
+            padding-left: 40px;
+            line-height: 28px;
         }
 
-        p {
-            font-size: 17px;
-            color: black;
-            font-weight: 300;
-            margin-left: 2%;
-        }
-      
-        img {
-            width: 100%;
-            height: 231px;
-            border-top-left-radius: 15px;
-            border-top-right-radius: 15px;
+        a {
+            width: 90%;
+            margin-bottom: 30px;
+
+            article {
+                display: flex;
+                flex-direction: column;
+                height: 251px;
+                border-radius: 20px;
+                background-color: $white;
+                position: relative;
+
+                img {
+                    height: 174px;
+                    object-fit: cover;
+                    border-top-left-radius: 20px;
+                    border-top-right-radius: 20px;
+                }
+
+                .sticker {
+                    width: 80px;
+                    height: 29px;
+                    border-radius: 2px;
+                    background-color: $lightGreen;
+                    color: $green;
+                    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+                    font-size: 14px;
+                    font-weight: 500;
+                    line-height: 16px;
+                    position: absolute;
+                    right: 15px;
+                    top: 15px;
+                    z-index: 1;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                .eatery-container {
+                    display: flex;
+                    justify-content: space-between;
+                    flex: 1;
+
+                    .eatery-desc {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        flex: 1;
+
+                        h3 {
+                            margin-top: 0;
+                            margin-bottom: 0;
+                            padding-left: 15px;
+                        }
+
+                        p {
+                            margin-top: 0;
+                            margin-bottom: 0;
+                            padding-left: 15px;
+                            font-size: 17px;
+                            font-weight: 300;
+                        }
+                    }
+
+                    .like {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 20%;
+                    }
+                }
+            }
         }
     }
+}
 
-    footer {
-        background: #353535;
-        color: #EAEAEA;
-        font-family: Roboto;
+footer {
+    background-color: $darkenGrey;
+    color: $white;
+    display: flex;
+    flex-direction: column;
+
+    h2 {
+        margin: 0;
+        padding-left: 25px;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        font-family: 'Shrikhand';
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 26.24px;
+    }
+
+    p {
+        margin: 0;
+        padding-left: 25px;
+        padding-bottom: 15px;
         font-size: 16px;
-        font-style: normal;
         font-weight: 500;
-        line-height: normal;
-      
-        ul {  
-            list-style-type: none;
-            padding-left: 5%;
-          }
+        line-height: 18.75px;
 
-      .logo{
-            color:#FFF;
-            font-family: Shrikhand;
-            font-size: 18px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
-            margin-bottom: 3%;
-            padding-top: 3%;
-         }    
+        a {
+            color: $white;
 
-         i{
-            margin-right: 2%;
-          }
+            .fa-utensils {
+                padding-right: 10px;
+            }
 
-      }
+            .fa-handshake-angle {
+                padding-right: 5px;
+            }
+        }
 
+        &.contact {
+            padding-bottom: 25px;
+        }
+    }
 }
