--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,45 @@
-/****** General ***********/
 * {
   font-family: "Roboto", sans-serif;
   text-decoration: none;
- 
 }
 
 body {
   margin: 0;
+  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
 
+h2 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+/****** General ***********/
 header {
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+  height: 63px;
 }
-header .logo img {
-  width: 50%;
-  padding-right: 30%;
-  padding-left: 30%;
+header .logo {
+  color: black;
+  text-align: center;
+  font-family: Shrikhand;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 main .localisation {
@@ -35,146 +57,214 @@ main .localisation p {
 }
 main .reservation {
   width: 100%;
-  height: 295px;
-  background: #F6F6F6;
+  background: #F3F3F3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 main .reservation h1 {
-  font-size: 24px;
   text-align: center;
+  margin: 0;
+  color: black;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 20px;
 }
 main .reservation p {
   color: #353535;
   text-align: center;
   font-size: 18px;
-  padding-bottom: 10%;
+  margin: 0;
+  margin-bottom: 20px;
 }
 main .reservation .btn {
   color: #fff;
   background: linear-gradient(#FF79DA, #9356DC);
-  font-size: 20px;
   border-radius: 50px;
   border: none;
-  padding: 2%;
+  padding-left: 20px;
+  padding-right: 20px;
   text-decoration: none;
-  margin: 20%;
-}
-main .fonctionnement {
-  width: 375px;
-  height: 440px;
-}
-main .fonctionnement h2 {
-  font-size: 24px;
-  color: #000;
-  padding-left: 6%;
-}
-main .fonctionnement .fonctions {
-  margin: 10%;
-  background: #F6F6F6;
-  text-decoration: none;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-  border-radius: 20px;
-  width: 322.486px;
-  height: 72.379px;
-  text-align: center;
-}
-
-.fonctions a{
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  height: 50px;
+  display: flex;
+  align-items: center;
 }
-
-
-
-.fonctions i{
-  padding-right:  5%;
+main section.functioning {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #FFFFFF;
 }
-
-
-/**.fonctions i {
-  border-radius: 50%;
-  border: 1px solid  #9356DC;
-  height: 24px;
+main section.functioning h2 {
+  width: 100%;
+  padding-left: 40px;
+  line-height: 28px;
+}
+main section.functioning button {
+  position: relative;
+  width: 90%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 72.38px;
+  background-color: #F7F7F7;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+  font-weight: 500;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 30px;
+}
+main section.functioning button .badge {
   width: 24px;
+  height: 24px;
+  background-color: #9356DC;
+  color: #FFFFFF;
+  font-size: 14.18px;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 10px;
-  background: #9356DC;
-  color: #F6F6F6;
+  position: absolute;
+  left: -12px;
 }
-**/
-
-.restaurants{
+main section.functioning button i {
+  color: #7E7E7E;
+  font-size: 19.9px;
+  position: absolute;
+  left: 8%;
+}
+main section.functioning button:hover i {
+  color: #9356DC;
+}
+main section.eateries {
   display: flex;
   flex-direction: column;
-  padding-left: 5%;
-  background:  #F6F6F6;
+  justify-content: center;
+  align-items: center;
+  background-color: #EAEAEA;
 }
-
-.restaurantcard{
-  height: 340px;
-  border-radius: 15px;
-  background: #FFF;
-  margin-bottom: 15%;
-  /* Shadow/Card */
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
-}
-
-
-.restaurantcard h3{
+main section.eateries h2 {
   width: 100%;
-  font-family: Roboto;
-  font-size: 18px;
-  font-weight: 700;
-  color: #000;
-  margin-left: 2%;
-} 
-
-.restaurantcard p{
+  padding-left: 40px;
+  line-height: 28px;
+}
+main section.eateries a {
+  width: 90%;
+  margin-bottom: 30px;
+}
+main section.eateries a article {
+  display: flex;
+  flex-direction: column;
+  height: 251px;
+  border-radius: 20px;
+  background-color: #FFFFFF;
+  position: relative;
+}
+main section.eateries a article img {
+  height: 174px;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+main section.eateries a article .sticker {
+  width: 80px;
+  height: 29px;
+  border-radius: 2px;
+  background-color: #99E2D0;
+  color: #008766;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main section.eateries a article .eatery-container {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+}
+main section.eateries a article .eatery-container .eatery-desc {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
+}
+main section.eateries a article .eatery-container .eatery-desc h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 15px;
+}
+main section.eateries a article .eatery-container .eatery-desc p {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 15px;
   font-size: 17px;
-  color: black;
   font-weight: 300;
-  margin-left: 2%;
 }
-
-.restaurantcard img{
-  width: 100%;
-  height: 231px;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+main section.eateries a article .eatery-container .like {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
 }
 
 footer {
-  background: #353535;
-  color: #EAEAEA;
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  
+  background-color: #353535;
+  color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
 }
-footer ul {  
-  list-style-type: none;
-  padding-left: 5%;
-}
-
-.logo{
-  color:#FFF;
-  font-family: Shrikhand;
+footer h2 {
+  margin: 0;
+  padding-left: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  font-family: "Shrikhand";
   font-size: 18px;
-  font-style: normal;
   font-weight: 400;
-  line-height: normal;
-  margin-bottom: 3%;
-  padding-top: 3%;
+  line-height: 26.24px;
 }
-
-footer i{
-  margin-right: 2%;
+footer p {
+  margin: 0;
+  padding-left: 25px;
+  padding-bottom: 15px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18.75px;
+}
+footer p a {
+  color: #FFFFFF;
+}
+footer p a .fa-utensils {
+  padding-right: 10px;
+}
+footer p a .fa-handshake-angle {
+  padding-right: 5px;
+}
+footer p.contact {
+  padding-bottom: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
