--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,10 @@ header .logo {
   line-height: normal;
 }
 
+main {
+  /*******fonctionnement*******/
+  /*******restaurants*******/
+}
 main .localisation {
   display: flex;
   width: 100%;
@@ -152,6 +156,11 @@ main section.functioning button i {
 main section.functioning button:hover i {
   color: #9356DC;
 }
+@media (min-width: 996px) {
+  main section.functioning {
+    flex-direction: row;
+  }
+}
 main section.eateries {
   display: flex;
   flex-direction: column;
@@ -229,7 +238,37 @@ main section.eateries a article .eatery-container .like {
   align-items: center;
   width: 20%;
 }
+main section.eateries a article .eatery-container .like i {
+  position: absolute;
+}
+main section.eateries a article .eatery-container .full {
+  opacity: 0;
+  transition-property: all;
+  transition-duration: 300ms;
+}
+main section.eateries a article .eatery-container .full:hover {
+  opacity: 1;
+  color: transparent;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+@media (min-width: 996px) {
+  main section.eateries {
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    padding-left: 10%;
+    flex-direction: row;
+  }
+  main section.eateries a {
+    width: 40%;
+    margin-bottom: 30px;
+    margin-left: 3%;
+  }
+}
 
+/*******footer*******/
 footer {
   background-color: #353535;
   color: #FFFFFF;
@@ -265,6 +304,20 @@ footer p a .fa-handshake-angle {
 }
 footer p.contact {
   padding-bottom: 25px;
+}
+
+@media (min-width: 996px) {
+  footer {
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: row;
+  }
+  footer h2 {
+    padding-bottom: 10px;
+  }
+  footer p.contact {
+    padding-bottom: 15px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
