--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,5 @@
 @import './variables.scss';
 @import './base.scss';
+@import './shared.scss';
 @import './index.scss';
+@import './restaurants.scss';
