--- a/styles/restaurants.scss
+++ b/styles/restaurants.scss
@@ -1,4 +1,9 @@
 /*********Page*********/
+body {
+    display: flex;
+    flex-direction: column;  
+}
+
 .pageheader {
     display: flex;
     justify-content: space-between;
@@ -13,6 +18,7 @@
 }
 
 
+
 .backimage {
     height: 275px;
     width: 100%;
@@ -22,7 +28,6 @@
 
 .pagemenu {
     width: 100%;
-    height: 1307px;
     background: #F3F3F3;
     border-radius: 40px 40px 0px 0px;
     top: -40px;
@@ -154,8 +159,8 @@
 .commander {
     display: flex;
     justify-content: center;
-    margin-top: 10%;
-
+    margin-top: 5%;
+    margin-bottom: 5%;
     .btn {
         padding-left: 8px;
         padding-right: 8px;
@@ -191,4 +196,29 @@
             transform: scale(1.01);
         }
     }
+}
+
+@media screen and (min-width: 769px) {
+
+    .pageheader h1 {
+        padding-right: 45%;
+      }
+
+    .pagemenu {
+        width: 80%;
+        margin-left: 10%;
+
+        .card{
+            margin-bottom: 2%;
+        }
+    }
+
+
+
+
+
+
+
+
+
 }
