--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,63 @@ a {
   color: black;
 }
 
+footer {
+  background-color: #353535;
+  color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+}
+footer h2 {
+  margin: 0;
+  padding-left: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  font-family: "Shrikhand";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26.24px;
+}
+footer p {
+  margin: 0;
+  padding-left: 25px;
+  padding-bottom: 15px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18.75px;
+}
+footer p a {
+  color: #FFFFFF;
+}
+footer p a .fa-utensils {
+  padding-right: 10px;
+}
+footer p a .fa-handshake-angle {
+  padding-right: 5px;
+}
+footer p.contact {
+  padding-bottom: 25px;
+}
+
+@media screen and (min-width: 769px) {
+  footer {
+    flex-direction: row;
+    justify-content: flex-end;
+    height: 114px;
+  }
+  footer h2 {
+    width: 20%;
+    order: 2;
+    padding-bottom: 30px;
+    padding-top: 60px;
+    text-align: center;
+  }
+  footer p {
+    order: 1;
+    padding-top: 25px;
+    padding-bottom: 30px;
+    padding-top: 62px;
+  }
+}
 /****** General ***********/
 div.spinner {
   position: fixed;
@@ -355,44 +412,6 @@ main section.eateries a article .eatery-container .full:hover {
   -webkit-background-clip: text;
 }
 
-/*******footer*******/
-footer {
-  background-color: #353535;
-  color: #FFFFFF;
-  display: flex;
-  flex-direction: column;
-}
-footer h2 {
-  margin: 0;
-  padding-left: 25px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  font-family: Shrikhand;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 26.24px;
-}
-footer p {
-  margin: 0;
-  padding-left: 25px;
-  padding-bottom: 15px;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 18.75px;
-}
-footer p a {
-  color: #FFFFFF;
-}
-footer p a .fa-utensils {
-  padding-right: 10px;
-}
-footer p a .fa-handshake-angle {
-  padding-right: 5px;
-}
-footer p.contact {
-  padding-bottom: 25px;
-}
-
 @media (min-width: 769px) {
   main#home {
     display: flex;
@@ -441,26 +460,13 @@ footer p.contact {
   main#home section.eateries a {
     width: 45%;
   }
-  footer {
-    flex-direction: row;
-    justify-content: flex-end;
-    height: 114px;
-  }
-  footer h2 {
-    width: 20%;
-    order: 2;
-    padding-bottom: 30px;
-    padding-top: 60px;
-    text-align: center;
-  }
-  footer p {
-    order: 1;
-    padding-top: 25px;
-    padding-bottom: 30px;
-    padding-top: 62px;
-  }
 }
 /*********Page*********/
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 .pageheader {
   display: flex;
   justify-content: space-between;
@@ -481,7 +487,6 @@ footer p.contact {
 
 .pagemenu {
   width: 100%;
-  height: 1307px;
   background: #F3F3F3;
   border-radius: 40px 40px 0px 0px;
   top: -40px;
@@ -588,7 +593,8 @@ footer p.contact {
 .commander {
   display: flex;
   justify-content: center;
-  margin-top: 10%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 .commander .btn {
   padding-left: 8px;
@@ -619,6 +625,19 @@ footer p.contact {
   -webkit-transform: scale(1.01);
   /* Safari 3-8 */
   transform: scale(1.01);
+}
+
+@media screen and (min-width: 769px) {
+  .pageheader h1 {
+    padding-right: 45%;
+  }
+  .pagemenu {
+    width: 80%;
+    margin-left: 10%;
+  }
+  .pagemenu .card {
+    margin-bottom: 2%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
