--- a/styles/index.scss
+++ b/styles/index.scss
@@ -176,37 +176,6 @@ main {
             margin: 0;
             margin-bottom: 20px;
         }
-
-        .btn {
-            color: #fff;
-            background: linear-gradient(#FF79DA, #9356DC);
-            border-radius: 50px;
-            border: none;
-            padding-left: 20px;
-            padding-right: 20px;
-            text-decoration: none;
-            font-family: Roboto;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 500;
-            line-height: normal;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-            transition: box-shadow .5s, opacity .5s, transform .5s;
-
-            &:hover {
-                opacity: 85%;
-                box-shadow: 4px 8px 10px 4px rgba(0, 0, 0, 0.25);
-                -ms-transform: scale(1.01);
-                /* IE 9 */
-                -webkit-transform: scale(1.01);
-                /* Safari 3-8 */
-                transform: scale(1.01);
-            }
-
-        }
     }
 
     /*******fonctionnement*******/
@@ -352,32 +321,32 @@ main {
                         }
                     }
 
-                    .like {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        width: 20%;
+                    // .like {
+                    //     display: flex;
+                    //     justify-content: center;
+                    //     align-items: center;
+                    //     width: 20%;
 
-                        i {
-                            position: absolute;
-                            font-size: 24px;
-                        }
-                    }
+                    //     i {
+                    //         position: absolute;
+                    //         font-size: 24px;
+                    //     }
+                    // }
 
-                    .full {
-                        opacity: 0;
-                        transition-property: all;
-                        transition-duration: 500ms;
+                    // .full {
+                    //     opacity: 0;
+                    //     transition-property: all;
+                    //     transition-duration: 500ms;
 
-                        &:hover {
-                            opacity: 1;
-                            color: transparent;
-                            background-image: linear-gradient(#FF79DA, #9356DC);
-                            background-clip: text;
-                            -webkit-background-clip: text;
-                        }
+                    //     &:hover {
+                    //         opacity: 1;
+                    //         color: transparent;
+                    //         background-image: linear-gradient(#FF79DA, #9356DC);
+                    //         background-clip: text;
+                    //         -webkit-background-clip: text;
+                    //     }
 
-                    }
+                    // }
                 }
             }
         }
