--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,56 @@ a {
   color: black;
 }
 
+.like {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+}
+.like i {
+  position: absolute;
+  font-size: 24px;
+}
+.like .full {
+  opacity: 0;
+  color: transparent;
+  background: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  transition: all 1s ease-in-out;
+}
+.like .full:hover {
+  opacity: 1;
+}
+
+.btn {
+  color: #fff;
+  background: linear-gradient(#FF79DA, #9356DC);
+  border-radius: 50px;
+  border: none;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-decoration: none;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 0.5s, opacity 0.5s, transform 0.5s;
+}
+.btn:hover {
+  opacity: 85%;
+  box-shadow: 4px 8px 10px 4px rgba(0, 0, 0, 0.25);
+  -ms-transform: scale(1.01);
+  /* IE 9 */
+  -webkit-transform: scale(1.01);
+  /* Safari 3-8 */
+  transform: scale(1.01);
+}
+
 footer {
   background-color: #353535;
   color: #FFFFFF;
@@ -238,34 +288,6 @@ main .reservation p {
   margin: 0;
   margin-bottom: 20px;
 }
-main .reservation .btn {
-  color: #fff;
-  background: linear-gradient(#FF79DA, #9356DC);
-  border-radius: 50px;
-  border: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-decoration: none;
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  transition: box-shadow 0.5s, opacity 0.5s, transform 0.5s;
-}
-main .reservation .btn:hover {
-  opacity: 85%;
-  box-shadow: 4px 8px 10px 4px rgba(0, 0, 0, 0.25);
-  -ms-transform: scale(1.01);
-  /* IE 9 */
-  -webkit-transform: scale(1.01);
-  /* Safari 3-8 */
-  transform: scale(1.01);
-}
 main section.functioning {
   display: flex;
   flex-direction: column;
@@ -389,28 +411,6 @@ main section.eateries a article .eatery-container .eatery-desc p {
   font-size: 17px;
   font-weight: 300;
 }
-main section.eateries a article .eatery-container .like {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 20%;
-}
-main section.eateries a article .eatery-container .like i {
-  position: absolute;
-  font-size: 24px;
-}
-main section.eateries a article .eatery-container .full {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 500ms;
-}
-main section.eateries a article .eatery-container .full:hover {
-  opacity: 1;
-  color: transparent;
-  background-image: linear-gradient(#FF79DA, #9356DC);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
 
 @media (min-width: 769px) {
   main#home {
@@ -508,33 +508,6 @@ body {
   width: 90%;
   padding-left: 20px;
 }
-.pagemenu .title span {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 10%;
-  padding-right: 10%;
-}
-.pagemenu .title span h2 {
-  font-family: Shrikhand, cursive;
-  margin-right: 20%;
-}
-.pagemenu .title span i {
-  position: absolute;
-  font-size: 24px;
-}
-.pagemenu .title span .fullpage {
-  opacity: 0;
-  transition-property: all;
-  transition-duration: 500ms;
-}
-.pagemenu .title span .fullpage:hover {
-  opacity: 1;
-  color: transparent;
-  background-image: linear-gradient(#FF79DA, #9356DC);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
 .pagemenu h2 {
   color: #000;
   font-family: Roboto;
@@ -553,7 +526,102 @@ body {
   height: 3px;
   background-color: #99E2D0;
 }
-.pagemenu .card {
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+.pagemenu .menu {
+  animation: fadeIn 0.5s both;
+  /**** ***/
+  /*** ***/
+}
+.pagemenu .menu:nth-child(1) {
+  animation-delay: 500ms;
+}
+.pagemenu .menu:nth-child(2) {
+  animation-delay: 1000ms;
+}
+.pagemenu .menu:nth-child(3) {
+  animation-delay: 1500ms;
+}
+.pagemenu .menu:nth-child(4) {
+  animation-delay: 2000ms;
+}
+.pagemenu .menu article {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  height: 69px;
+  box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+  border-radius: 15.0431px;
+  background-color: #FFFFFF;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 12px;
+  margin-left: 5%;
+}
+.pagemenu .menu article .description {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 5px;
+  padding: 12px 16px 12px 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.pagemenu .menu article .description h4 {
+  margin: 0;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21.09px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.pagemenu .menu article .description .sub-title {
+  display: flex;
+  justify-content: space-between;
+}
+.pagemenu .menu article .description .sub-title span {
+  font-size: 15.0431px;
+  line-height: 18px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.pagemenu .menu article .description .sub-title .price {
+  font-weight: 700;
+  max-width: 80%;
+  text-overflow: inherit;
+  width: 35px;
+}
+.pagemenu .menu article .tick {
+  background-color: #99E2D0;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: -60px;
+  transition: all 0.5s linear;
+  width: 59px;
+}
+.pagemenu .menu article .tick i {
+  font-size: 21px;
+  margin: 0;
+}
+.pagemenu .menu article:hover .tick {
+  margin-right: 0;
+}
+.pagemenu .menu a .card {
   display: flex;
   justify-content: flex-start;
   width: 92%;
@@ -564,14 +632,14 @@ body {
   margin-right: 5%;
   margin-bottom: 5%;
 }
-.pagemenu .card div {
+.pagemenu .menu a .card div {
   display: flex;
   flex-direction: column;
   width: 85%;
   padding-top: 10px;
   padding-left: 15px;
 }
-.pagemenu .card h3 {
+.pagemenu .menu a .card div h3 {
   margin-top: 0;
   margin-bottom: 5px;
   overflow: hidden;
@@ -579,12 +647,12 @@ body {
   white-space: nowrap;
   width: 80%;
 }
-.pagemenu .card span {
+.pagemenu .menu a .card span {
   display: flex;
   justify-content: space-between;
   align-items: first baseline;
 }
-.pagemenu .card .check {
+.pagemenu .menu a .card .check {
   background-color: #99e2d0;
   width: 59px;
   display: flex;
@@ -598,19 +666,19 @@ body {
   transition: 200ms;
   flex-shrink: 0;
 }
-.pagemenu .card .check i {
+.pagemenu .menu a .card .check i {
   color: #99e2d0;
   border-radius: 50%;
   background: white;
   margin-right: 8px;
 }
-.pagemenu .card .check:hover {
+.pagemenu .menu a .card .check:hover {
   opacity: 1;
   right: 0;
   margin-left: 10px;
   transition: 1s;
 }
-.pagemenu .card p {
+.pagemenu .menu a .card p {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 17px;
@@ -620,7 +688,7 @@ body {
   white-space: nowrap;
   width: 80%;
 }
-.pagemenu .card h4 {
+.pagemenu .menu a .card h4 {
   padding-top: 15px;
 }
 
@@ -631,34 +699,8 @@ body {
   margin-bottom: 5%;
 }
 .commander .btn {
-  padding-left: 8px;
-  padding-right: 8px;
-  text-decoration: none;
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  height: 50px;
-  width: 35%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  background: linear-gradient(#FF79DA, #9356DC);
-  border-radius: 50px;
-  border: none;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  transition: box-shadow 0.5s, opacity 0.5s, transform 0.5s;
-}
-.commander .btn:hover {
-  opacity: 85%;
-  box-shadow: 4px 8px 10px 4px rgba(0, 0, 0, 0.25);
-  -ms-transform: scale(1.01);
-  /* IE 9 */
-  -webkit-transform: scale(1.01);
-  /* Safari 3-8 */
-  transform: scale(1.01);
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 @media screen and (min-width: 769px) {
